[package]
name = "debugoff"
version = "0.2.1"
edition = "2021"
description = "Linux anti-analysis and anti-debugging Rust library"
documentation = "https://docs.rs/debugoff"
readme = "README.md"
authors = ["0xor0ne"]
license = "GPL-3.0 OR MIT"
homepage = "https://github.com/0xor0ne/debugoff"
repository = "https://github.com/0xor0ne/debugoff"
keywords = ["debugging", "anti-debugging", "anti-analysis", "obfuscation"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchy = "0.2"
const-random = "0.1"
unroll = "0.1"
goldberg = { version = "0.1", optional = true }

[features]
obfuscate = ["goldberg"]
syscallobf = []

[profile.release]
debug = false
strip = "symbols"
panic = "abort"
